<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <TextView
            android:id="@+id/cityInfo"
            android:layout_width="match_parent"
            android:layout_height="268dp" />

        <Button
            android:id="@+id/mapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_x="-4dp"
            android:layout_y="233dp"
            android:text="Show Map" />

        <Button
            android:id="@+id/weatherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weather" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>