<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- City name text -->
        <TextView
            android:id="@+id/cityNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City Name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="8dp" />
        <!-- Map information -->
        <TextView
            android:id="@+id/mapViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- WebView for map -->
        <WebView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>